--- a/frontend/templates/credits.html
+++ b/frontend/templates/credits.html
@@ -19,14 +19,14 @@
         <div class="row justify-content-center">
             <div class="col-12 text-center">
                 <a href="http://www.flaticon.com" target="_blank">
-                <img src="{{ m.static('images/flaticon.png') }}"><br/>
+                <img src="{{ m.static('images/flaticon.png') }}" class="mw-100"><br/>
                     <span>Icons made by Pixel perfect from www.flaticon.com</span>
                 </a>
             </div>
 
             <div class="col-12 text-center mt-5">
                 <a href="https://startbootstrap.com/theme/freelancer" target="_blank">
-                <img src="{{ m.static('images/startbootstrap.png') }}"><br/>
+                <img src="{{ m.static('images/startbootstrap.png') }}" class="mw-100"><br/>
                     <span>Page template by www.startbootstrap.com</span>
                 </a>
             </div>
