--- a/frontend/templates/standard.html
+++ b/frontend/templates/standard.html
@@ -1,5 +1,9 @@
 {% extends "basic.html" %}
 
+{% block topscripts %}
+<script src="https://cdn.jsdelivr.net/npm/sharer.js@latest/sharer.min.js"></script>
+{% endblock %}
+
 {% block navitems %}
 <ul class="navbar-nav ml-auto">
     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" data-toggle="modal" data-target="#languageModal" href="">LANGUAGE</a></li>
