--- a/frontend/templates/_categories.html
+++ b/frontend/templates/_categories.html
@@ -19,7 +19,7 @@
         {% endif %}
 
         <!-- Portfolio Grid Items-->
-        <div class="row justify-content-center mt-4" data-aos="fade-up">
+        <div class="row justify-content-center mt-4">
             <!-- Portfolio Item 1-->
             <div class="col-md-6 col-lg-3 mb-4">
                 <div class="portfolio-item mx-auto">
@@ -51,8 +51,8 @@
         {% if not current_user.is_authenticated %}
         <div class="row">
             <div class="col-12 mb-3">
-                <div class="bg-secondary text-light" style="border-radius: 10px; padding: 7px">
-                    <span><a href="{{ url_for('auth.login') }}" class="text-light"><em>Login</em></a> or <a href="{{ url_for('auth.register') }}" class="text-light"><em>Register</em></a> to store this chart pack permanently and gain extra features like creating collations</span>
+                <div class="bg-secondary text-light pl-3" style="border-radius: 10px; padding: 7px">
+                    <span><a href="{{ url_for('auth.login') }}" class="text-light"><em>Login</em></a> or <a href="{{ url_for('auth.register') }}" class="text-light"><em>Register</em></a> to store this chart pack permanently and gain access to extra features</span>
                 </div>
             </div>
         </div>
