Zmieniony układ wykresów i dodany jeden prawdziwy wykres

--- a/frontend/static/css/styles.css
+++ b/frontend/static/css/styles.css
@@ -61,4 +61,12 @@
 	text-decoration: none;
 }
 
+.card-columns {
+    column-count: 1;
+}
 
+@media (min-width: 992px) {
+	.card-columns {
+		column-count: 2;
+	}
+}
