Naprawiono bug dotyczacy niewlasciwego packid podczas wysylania pliku
Naprawiono bug dotyczący niewłasciwego packid podczas wysyłania pliku

--- a/frontend/templates/waiting.html
+++ b/frontend/templates/waiting.html
@@ -27,6 +27,8 @@
         <div class="waiting-icon">
             <img src="{{m.static('images/logo_white_icon.png')}}" style="width: 100px" alt="NILA">
         </div>
+
+        <p id="packid" class="d-none">{{packid}}</p>
     </div>
 </section>
 {% endblock %}
