Poczatek wykresu ilosci zdjec

--- a/frontend/templates/graphs_messages.html
+++ b/frontend/templates/graphs_messages.html
@@ -13,6 +13,7 @@
     <div class="container-fluid pt-4 pb-3">
         <div class="card-columns">
                 {{ graph_m.render(pack.get(5)) }}
+                {{ graph_m.render(pack.get(6)) }}
                 {{ graph_m.render(pack.get(1)) }}
                 {{ graph_m.render(pack.get(2)) }}
                 {{ graph_m.render(pack.get(3)) }}
