--- a/frontend/templates/_categories.html
+++ b/frontend/templates/_categories.html
@@ -23,7 +23,7 @@
             <!-- Portfolio Item 1-->
             <div class="col-md-6 col-lg-3 mb-4">
                 <div class="portfolio-item mx-auto">
-                    <a href="{{ url_for('main.graphs_messages', id=pack.id) }}">
+                    <a href="{{ url_for('main.graphs_category', id=pack.id, category='messages') }}">
                         <img class="img-fluid" src="{{ m.static('images/category_messages.png') }}" alt="" />
                     </a>
                 </div>
@@ -31,19 +31,25 @@
             <!-- Portfolio Item 2-->
             <div class="col-md-6 col-lg-3 mb-4">
                 <div class="portfolio-item mx-auto">
-                    <img class="img-fluid" src="{{ m.static('images/foo.png') }}" alt="" />
+                    <a href="{{ url_for('main.graphs_category', id=pack.id, category='posts') }}">
+                        <img class="img-fluid" src="{{ m.static('images/foo.png') }}" alt="" />
+                    </a>
                 </div>
             </div>
             <!-- Portfolio Item 3-->
             <div class="col-md-6 col-lg-3 mb-4">
                 <div class="portfolio-item mx-auto">
-                    <img class="img-fluid" src="{{ m.static('images/foo.png') }}" alt="" />
+                    <a href="{{ url_for('main.graphs_category', id=pack.id, category='others') }}">
+                        <img class="img-fluid" src="{{ m.static('images/foo.png') }}" alt="" />
+                    </a>
                 </div>
             </div>
             <!-- Portfolio Item 4-->
             <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
                 <div class="portfolio-item mx-auto">
-                    <img class="img-fluid" src="{{ m.static('images/foo.png') }}" alt="" />
+                    <a href="{{ url_for('main.graphs_category', id=pack.id, category='others') }}">
+                        <img class="img-fluid" src="{{ m.static('images/foo.png') }}" alt="" />
+                    </a>
                 </div>
             </div>
         </div>
