--- a/frontend/templates/graphs_category.html
+++ b/frontend/templates/graphs_category.html
@@ -10,14 +10,11 @@
 {% block sections %}
 {% include "_categories.html" %}
 <section>
-    <div class="container-fluid pt-4 pb-3">
+    <div class="container-fluid pt-4 pb-3" style="min-height: 300px">
         <div class="card-columns">
-                {{ graph_m.render(pack.get(5)) }}
-                {{ graph_m.render(pack.get(6)) }}
-                {{ graph_m.render(pack.get(1)) }}
-                {{ graph_m.render(pack.get(2)) }}
-                {{ graph_m.render(pack.get(3)) }}
-                {{ graph_m.render(pack.get(4)) }}
+            {% for graph in graphs %}
+                {{ graph_m.render(graph) }}
+            {% endfor %}
         </div>
     </div>
 </section>
