--- a/frontend/templates/account.html
+++ b/frontend/templates/account.html
@@ -1,7 +1,7 @@
 {% extends "standard.html" %}
 
 {% block sections %}
-<section class="page-section first-section pt-5 pb-5 bg-primary">
+<section class="page-section first-section pt-5 pb-5 bg-primary round-bottom">
     <div class="container">
         <div class="row">
             <div class="col-12">
@@ -17,7 +17,7 @@
         </div>
 
         <div class="row">
-            <div class="col-auto d-none d-sm-block">
+            <div class="col-auto">
                 <img src="{{ m.static('images/user_icon.png') }}" style="width: 130px" />
             </div>
             <div class="col-auto">
