--- a/frontend/templates/_categories.html
+++ b/frontend/templates/_categories.html
@@ -1,4 +1,4 @@
-<section class="page-section portfolio first-section bg-primary pb-0">
+<section class="page-section portfolio first-section bg-primary pb-0 round-bottom">
     <div class="container">
 
         <!-- Heading -->
@@ -21,7 +21,7 @@
         <!-- Portfolio Grid Items-->
         <div class="row justify-content-center mt-4">
             <!-- Portfolio Item 1-->
-            <div class="col-md-6 col-lg-3 mb-4">
+            <div class="col-6 col-lg-3 mb-4">
                 <div class="portfolio-item mx-auto category {% if category=='messages' %}category-selected{% endif %}">
                     <a href="{{ url_for('main.graphs_category', id=pack.id, category='messages') }}">
                         <img class="img-fluid" src="{{ m.static('images/category_messages.png') }}" alt="" />
@@ -30,7 +30,7 @@
                 </div>
             </div>
             <!-- Portfolio Item 2-->
-            <div class="col-md-6 col-lg-3 mb-4">
+            <div class="col-6 col-lg-3 mb-4">
                 <div class="portfolio-item mx-auto category {% if category=='posts' %}category-selected{% endif %}">
                     <a href="{{ url_for('main.graphs_category', id=pack.id, category='posts') }}">
                         <img class="img-fluid" src="{{ m.static('images/foo.png') }}" alt="" />
@@ -39,7 +39,7 @@
                 </div>
             </div>
             <!-- Portfolio Item 3-->
-            <div class="col-md-6 col-lg-3 mb-4">
+            <div class="col-6 col-lg-3 mb-4">
                 <div class="portfolio-item mx-auto category {% if category=='miscellaneous' %}category-selected{% endif %}">
                     <a href="{{ url_for('main.graphs_category', id=pack.id, category='miscellaneous') }}">
                         <img class="img-fluid" src="{{ m.static('images/foo.png') }}" alt="" />
@@ -48,7 +48,7 @@
                 </div>
             </div>
             <!-- Portfolio Item 4-->
-            <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
+            <div class="col-6 col-lg-3 mb-4 mb-lg-0">
                 <div class="portfolio-item mx-auto category {% if category=='other' %}category-selected{% endif %}">
                     <a href="{{ url_for('main.graphs_category', id=pack.id, category='other') }}">
                         <img class="img-fluid" src="{{ m.static('images/foo.png') }}" alt="" />
