--- a/frontend/templates/standard.html
+++ b/frontend/templates/standard.html
@@ -23,7 +23,7 @@
 {% include "_language_modal.html" %}
 
 <!-- Footer section -->
-<footer class="footer text-center">
+<footer class="footer text-center pt-4 pb-3">
     <div class="container">
         <div class="row">
             <div class="col-lg-4 mb-5 mb-lg-0">
