--- a/frontend/templates/graph.html
+++ b/frontend/templates/graph.html
@@ -10,7 +10,7 @@
 <section class="page-section first-section">
     <div class="container">
         <div class="col-12">
-            {{ graph_m.render(graph, title, showButton=False) }}
+            {{ graph_m.render(graph, showButton=False) }}
         </div>
     </div>
 </section>
