Dodano pasek nawigacyjny do każdej strony

--- a/frontend/templates/account.html
+++ b/frontend/templates/account.html
@@ -29,8 +29,14 @@
     </div>
 </section>
 
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb mt-4 ml-5 mr-5">
+        <li class="breadcrumb-item"><a href="{{ url_for('main.index') }}">Main page</a></li>
+        <li class="breadcrumb-item"><a>Account</a></li>
+    </ol>
+</nav>
 
-<section class="page-section pt-5">
+<section class="page-section pt-3">
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 col-lg-6" data-aos="zoom-in">
