--- a/frontend/templates/standard.html
+++ b/frontend/templates/standard.html
@@ -27,15 +27,15 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-4 mb-5 mb-lg-0">
-                <h4 class="mb-4">INVITE FRIENDS</h4>
-                <p class="pre-wrap lead mb-0">If You like our webside, talk about it to You friends. We would be gratefull!</p>
+                <h4 class="mb-2">Invite friends</h4>
+                <p class="pre-wrap mb-0">If You like our webside, talk about it to You friends. We would be gratefull!</p>
             </div>
             <div class="col-lg-4 mb-5 mb-lg-0 order-md-2">
-                <h4 class="mb-4">KEEP IN CONTACT</h4>
-                <p class="pre-wrap lead mb-0">If You would like to have a new feature or You found a bug just contact us, here!</p>
+                <h4 class="mb-2">Keep in contact</h4>
+                <p class="pre-wrap mb-0">If You would like to have a new feature or You found a bug just contact us, here!</p>
             </div>
             <div class="col-lg-4 mb-0 mb-lg-0 order-md-1">
-                <h4 class="mb-4">LIKE US ON FB</h4>
+                <h4 class="mb-2">Like us on facebook</h4>
                 <a class="btn btn-outline-light btn-social mx-1" href="https://www.facebook.com"><i class="fab fa-fw fa-facebook-f"></i></a>
             </div>
         </div>
