--- a/frontend/templates/standard.html
+++ b/frontend/templates/standard.html
@@ -6,12 +6,13 @@
 
 {% block navitems %}
 <ul class="navbar-nav ml-auto">
-    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" data-toggle="modal" data-target="#languageModal" href="">LANGUAGE</a></li>
+    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded text-uppercase" href="{{ url_for('main.contact') }}">Contact</a></li>
+    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded text-uppercase" data-toggle="modal" data-target="#languageModal" href="">Language</a></li>
     {% if current_user.is_authenticated %}
-    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="{{ url_for('main.account') }}">ACCOUNT</a></li>
-    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="{{ url_for('auth.logout') }}">LOGOUT</a></li>
+    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded text-uppercase" href="{{ url_for('main.account') }}">Account</a></li>
+    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded text-uppercase" href="{{ url_for('auth.logout') }}">Logout</a></li>
     {% else %}
-    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="{{ url_for('auth.login') }}">LOGIN</a></li>
+    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded text-uppercase" href="{{ url_for('auth.login') }}">Login</a></li>
     {% endif %}
 </ul>
 {% endblock %}
@@ -32,7 +33,7 @@
             </div>
             <div class="col-lg-4 mb-5 mb-lg-0 order-md-2">
                 <h4 class="mb-2">Keep in contact</h4>
-                <p class="pre-wrap mb-0">If You would like to have a new feature or You found a bug just contact us, here!</p>
+                <p class="pre-wrap mb-0">If You would like to have a new feature or You found a bug just contact us, <a href="{{url_for('main.contact')}}">here!</a></p>
             </div>
             <div class="col-lg-4 mb-0 mb-lg-0 order-md-1">
                 <h4 class="mb-2">Like us on facebook</h4>
