Dodany floating button na stronie głównej

--- a/frontend/static/css/styles.css
+++ b/frontend/static/css/styles.css
@@ -49,6 +49,30 @@
     border-radius: 5px;
 }
 
+.floating-contact {
+	right: 0px;
+	bottom: 50%;
+	background-color: #2C3E50;
+	padding: 0px;
+	border-top-left-radius: 10px;
+	border-bottom-left-radius: 10px;
+	padding: 15px;
+	color: white;
+	border: 2px solid white;
+}
+
+.floating-contact:hover {
+	width: 70px;
+}
+
+.floating-contact a {
+	color: inherit;
+}
+
+.floating-contact a:hover {
+	text-decoration: none;
+}
+
 /* Account page */
 .account-item:hover {
 	background-color: #1abc9c;
