--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -104,4 +104,6 @@
         </div>
     </div>
 </section>
+
+<div class="floating-contact position-fixed d-none d-lg-block"><a href="{{ url_for('main.contact') }}"><img src="{{ m.static('images/question_white.png') }}" style="height: 30px"></a></div>
 {% endblock %}
