Poprawione udostępnianie wykresów

--- a/frontend/templates/_graph_render_macro.html
+++ b/frontend/templates/_graph_render_macro.html
@@ -11,7 +11,7 @@
   <embed type="image/svg+xml" src= {{ graph.data.render_data_uri()|safe }} />
   <div class="card-body mt-0 pt-0">
     {% if graph.pack.user == user() %}
-      <div class="graph-button"><a data-sharer="facebook" data-hashtag="SocialInsight" data-url="https://www.google.pl">Share</a></div>
+      <div class="graph-button"><a data-sharer="facebook" data-hashtag="SocialInsight" data-url="{{ url_for('main.graphs', id=graph.id) }}">Share</a></div>
       <div class="graph-button"><a onclick="copyToClipboard({{graph.id}})">Copy link</a></div>
       {% if showButton %}
         <div class="graph-button"><a href="{{ url_for('main.graphs', id=graph.id) }}">Show</a></div>
