--- a/frontend/templates/basic.html
+++ b/frontend/templates/basic.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="Social Insight">
         <meta name="author" content="Radosław Pluta, Jacek Stasiak, Łukasz Klimkiewicz">
+        {% block meta %} {% endblock %}
         <title>Social Insight {% block title %} {% endblock %}</title>
 
         <!-- Icon -->
