Możliwosć zobaczenia przykładowych wyników

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -29,7 +29,7 @@
 
         <!-- Subheading-->
         <p class="pre-wrap masthead-subheading font-weight-light mt-0">Let us analyse you data</p>
-        <p>Or check sample output <a href="" class="text-white"><strong>here!</strong></a></p>
+        <p>Or check sample output <a href="" class="text-white"><strong><a href="{{url_for('main.example')}}" class="text-white">here!</a></strong></a></p>
     </div>
 </header>
 
