--- a/frontend/templates/_categories.html
+++ b/frontend/templates/_categories.html
@@ -11,7 +11,7 @@
                 {% endif %}
             </h2>
         </div>
-        {% if current_user.is_authenticated %}
+        {% if current_user.is_authenticated and pack.userid == current_user.id %}
         <div class="text-center">
             <span class="mr-3"><a href="" data-toggle="modal" data-target="#rename-pack-modal" class="text-secondary">rename</a></span>
             <span class="ml-3"><a href="{{ url_for('main.remove_pack_confirm', id=pack.id) }}" class="text-secondary">remove</a></span>
