Dodano oddzielny title dla każdej podstrony

--- a/frontend/templates/account.html
+++ b/frontend/templates/account.html
@@ -1,5 +1,7 @@
 {% extends "standard.html" %}
 
+{% block title %}Account{% endblock %}
+
 {% block sections %}
 <section class="page-section first-section pt-5 pb-5 bg-primary round-bottom">
     <div class="container">
