--- a/frontend/templates/waiting.html
+++ b/frontend/templates/waiting.html
@@ -1,5 +1,7 @@
 {% extends "standard.html" %}
 
+{% block title %}Waiting{% endblock %}
+
 {% block styles %}
 <link rel="stylesheet" href="{{ m.static('css/waiting.css') }}">
 {% endblock %}
