--- a/frontend/templates/contact.html
+++ b/frontend/templates/contact.html
@@ -1,6 +1,8 @@
 {% extends "standard.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
+{% block title %}Contact{% endblock %}
+
 {% block styles %}
     <style>
     #submit {margin: 20px}
