--- a/frontend/templates/credits.html
+++ b/frontend/templates/credits.html
@@ -1,5 +1,7 @@
 {% extends "standard.html" %}
 
+{% block title %}Credits{% endblock %}
+
 {% block sections %}
 <section class="page-section first-section">
     <div class="container">
