--- a/frontend/templates/error.html
+++ b/frontend/templates/error.html
@@ -1,5 +1,7 @@
 {% extends "basic.html" %}
 
+{% block title %}{{ title }}{% endblock %}
+
 {% block hamburger %} {% endblock %}
 
 {% block content %}
