--- a/frontend/templates/reset_password.html
+++ b/frontend/templates/reset_password.html
@@ -1,6 +1,8 @@
 {% extends "standard.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
+{% block title %}Reset password{% endblock %}
+
 {% block styles %}
     <style>
     #submit {margin: 20px}
