--- a/frontend/templates/account.html
+++ b/frontend/templates/account.html
@@ -42,10 +42,10 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 col-lg-6" data-aos="zoom-in">
-                {% include "_data_packs_list.html" %}
+                {% include "parts/_data_packs_list.html" %}
             </div>
             <div class="col-12 col-lg-6 mt-5 mt-lg-0" data-aos="zoom-in">
-                {% include "_collations_list.html" %}
+                {% include "parts/_collations_list.html" %}
             </div>
         </div>
     </div>
