--- a/frontend/templates/standard.html
+++ b/frontend/templates/standard.html
@@ -18,10 +18,10 @@
 {% endblock %}
 
 {% block content %}
-{% include "_flash.html" %}
+{% include "parts/_flash.html" %}
 {% block sections %} {% endblock %}
 
-{% include "_language_modal.html" %}
+{% include "parts/_language_modal.html" %}
 
 <!-- Footer section -->
 <footer class="footer text-center pt-4 pb-3">
