--- a/frontend/templates/basic.html
+++ b/frontend/templates/basic.html
@@ -1,4 +1,4 @@
-{% import "_macros.html" as m %}
+{% import "macros/general.html" as m %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -69,7 +69,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <script src="{{ m.static('scripts/layout.js') }}"></script>
-        {{ m.script("script_common.js") }}
+        {{ m.script("scripts/script_common.js") }}
         {% block bottomscripts %} {% endblock %}
     </body>
 </html>
