--- a/frontend/templates/category.html
+++ b/frontend/templates/category.html
@@ -1,6 +1,6 @@
 {% extends "standard.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
-{% import "_graph_render_macro.html" as graph_m %}
+{% import "macros/graph.html" as mgraph %}
 
 {% block title %}Category {{ category }}{% endblock %}
 
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block sections %}
-{% include "_categories.html" %}
+{% include "parts/_categories.html" %}
 
 {% if current_user.is_authenticated %}
 <nav aria-label="breadcrumb">
@@ -34,7 +34,7 @@
     <div class="container-fluid pt-2 pb-3" style="min-height: 300px">
         <div class="card-columns">
             {% for graph in graphs %}
-                {{ graph_m.render(graph) }}
+                {{ mgraph.render(graph) }}
             {% endfor %}
         </div>
     </div>
@@ -45,5 +45,5 @@
     {% endif %}
 </section>
 
-{% include "_rename_pack_modal.html" %}
+{% include "parts/_rename_pack_modal.html" %}
 {% endblock %}
