--- a/frontend/templates/graph.html
+++ b/frontend/templates/graph.html
@@ -1,5 +1,5 @@
 {% extends "standard.html" %}
-{% import "_graph_render_macro.html" as graph_m %}
+{% import "macros/graph.html" as mgraph %}
 
 {% block title %}{{ graph.get_name() }}{% endblock %}
 
@@ -12,7 +12,7 @@
 <section class="page-section first-section">
     <div class="container">
         <div class="col-12">
-            {{ graph_m.render(graph, showButton=False) }}
+            {{ mgraph.render(graph, showButton=False) }}
         </div>
     </div>
 </section>
