--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -1,14 +1,13 @@
 {% extends "standard.html" %}
 
 {% block bottomscripts %}
-    {{ m.script("_dropzone.js") }}
+    {{ m.script("scripts/dropzone.js") }}
 {% endblock %}
 
 {% block sections %}
 <!-- Header-->
 <header class="masthead bg-primary text-white text-center round-bottom">
     <div class="container d-flex align-items-center flex-column">
-        <!-- Title-->
         <h1 class="masthead-heading mb-4">Social Insight</h1>
 
         <!-- Upload zone-->
